<resources>
    <string name="app_name">learn kotlin</string>
    <string name="dick_roll"> to Dick Roll </string>
    <string name="linear_layout"> to LinearLayout </string>
    <string name="fragment"> to Fragment </string>
    <string name="click_to_roll"> click to roll </string>
    <string name="click_to_fill"> click to fill </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_page">next page</string>
    <string name="game_over">game over</string>
    <string name="game_won">game won</string>
    <string name="to_about_fragment">to about fragment</string>
    <string name="share">share</string>
    <string name="to_lifecycle">to lifecycle</string>
    <string name="to_guessgame">to GuessGame</string>
    <string name="play">Play</string>
    <string name="guess_game">Guess Game</string>
    <string name="got_it">got it</string>
    <string name="skip">skip</string>
    <string name="end_game">end game</string>
    <string name="your_score">your score</string>
    <string name="play_again">play again</string>
    <string name="_0">0</string>
    <string name="the_word_is">the word is</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
    <string name="to_trackmysleepquality">to TrackMySleepQuality</string>
    <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
    <string name="sleep_quality_fragment">SleepQualityFragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>
    <string name="cleared_message">All your data is gone forever.</string>
    <string name="about_fragment">about fragment</string>
    <string name="minutes_length">%d minutes start on %s</string>
    <string name="hours_length">%d hours start on %s</string>
    <string name="seconds_length">%d seconds start on %s</string>
    <string name="close">Close</string>
    <string name="sleep_results">Sleep Results</string>
    <string name="to_getonlinedata">to GetOnlineData</string>
    <string name="show_all">Show all</string>
    <string name="show_rent">Rent</string>
    <string name="show_buy">Buy</string>
    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>
    <string name="to_repository">to Repository</string>
    <string name="to_styles_and_themes">to styles and themes</string>
    <string name="gdg">gdg</string>
    <string name="add_gdg">"Couldn't find a GDG in your region? Great, go ahead and start one. Fill the form below and
        expect to hear from us shortly! "
    </string>
    <string name="application_submitted">Got your application request!! Oh well, not really. This is a test form just
        for educational purposes. If you really want to submit your application please visit the website!
    </string>
    <string name="gdg_search">GDG Search</string>
    <string name="gdg_apply">Apply to run GDG</string>
    <string name="gdgs_are">GDGs Are…</string>
    <string name="gdg_description_long">GDGs are local groups of developers who are specifically interested in Google
        products and APIs. Each local group is called a GDG chapter and can host a variety of technical activities for
        developers - from just a few people getting together to watch our latest videos, to large gatherings with demos
        and tech talks, to hackathons. Google Developers supports and recognizes GDG chapters, but doesn’t own or manage
        them.
    </string>
    <string name="about_google_developer_groups">About Google Developer Groups</string>
    <string name="gdg_description_bullets">️Run by passionate individuals in local developer communities\n
        ️A group to share ideas and network with fellow developers \n
        ️A place to learn about Google technologies and development tools \n
        Open to and free for all interested
    </string>
    <string name="waiting_for_location_and_network">Waiting for location and network result.\n\n If running on an
        emulator open the Maps app to enable location services.
    </string>
    <string name="stage_image_description">Photo from stage from a devfest</string>
    <string name="submit_button_description">Button to submit form</string>
    <string name="form_name_description">enter your name</string>
    <string name="motivation">Tell us a bit more about why do you want to start a GDG</string>
    <string name="your_name_label">Your name</string>
    <string name="email_label">e-mail</string>
    <string name="city_label">city</string>
    <string name="country_label">country</string>
    <string name="region_label">region</string>
    <string name="enter_motivation">Please enter your motivation in 1-2 sentences</string>
    <string name="submitted">Submitted, no need to submit again</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="egg_prompt">How do you like your egg?</string>
    <string name="timer_on">Start</string>
    <string name="timer_off">Stop</string>
    <string name="notification_title">Egg Timer</string>
    <string name="notification_text">Your egg is ready!!</string>
    <string name="fcm_message">FCM Message</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="egg_notification_channel_id" translatable="false">egg_channel</string>
    <string name="egg_notification_channel_name" translatable="true">Egg</string>
    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
    <string name="eggs_ready">It is time! Bon appetit!</string>
    <string name="egg_timer">egg timer</string>
    <string name="custom_view">custom view</string>
    <string name="to_mini_paint">to mini paint</string>
    <string name="to_clipping_example">to clipping example</string>
    <string name="to_spotlight">to spotlight</string>
    <string name="animation">animation</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="scale">Scale</string>
    <string name="fade">Fade</string>
    <string name="shower">Shower</string>
    <string name="sky_color">Sky Color</string>
    <string name="star">Star</string>
    <string name="credits">Virginia P @ Google</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum id venenatis a. Est placerat in egestas erat imperdiet sed. Ut lectus arcu bibendum at varius. Purus in mollis nunc sed id semper risus in hendrerit. Volutpat est velit egestas dui. Id diam vel quam elementum pulvinar etiam non. Tristique magna sit amet purus gravida quis blandit. Gravida in fermentum et sollicitudin ac orci. Sed augue lacus viverra vitae congue eu. Sapien nec sagittis aliquam malesuada bibendum. Tortor aliquam nulla facilisi cras fermentum odio. Egestas sed tempus urna et pharetra pharetra massa. Amet purus gravida quis blandit. Orci a scelerisque purus semper eget duis at tellus.

    Volutpat lacus laoreet non curabitur. Urna cursus eget nunc scelerisque viverra mauris. Turpis massa sed elementum tempus egestas sed sed risus pretium. Quam nulla porttitor massa id neque aliquam. Tempus quam pellentesque nec nam aliquam sem et. Ut eu sem integer vitae justo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Cras fermentum odio eu feugiat pretium nibh ipsum. Posuere morbi leo urna molestie at elementum eu facilisis sed. Augue eget arcu dictum varius duis at. Lacinia at quis risus sed vulputate odio. Massa tincidunt dui ut ornare.

    Auctor augue mauris augue neque gravida in fermentum et. Varius vel pharetra vel turpis nunc eget. Condimentum mattis pellentesque id nibh tortor id aliquet. In massa tempor nec feugiat nisl pretium fusce. Dolor sed viverra ipsum nunc aliquet bibendum. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed. Mauris a diam maecenas sed. Tortor aliquam nulla facilisi cras fermentum. Mattis rhoncus urna neque viverra. Dui sapien eget mi proin sed. In dictum non consectetur a. Eu consequat ac felis donec et odio pellentesque. Eget egestas purus viverra accumsan in nisl. Dui nunc mattis enim ut tellus elementum. Lobortis elementum nibh tellus molestie nunc non. Nisi porta lorem mollis aliquam ut porttitor leo a diam. Pulvinar mattis nunc sed blandit libero volutpat sed. Ut faucibus pulvinar elementum integer.

    Scelerisque varius morbi enim nunc faucibus a pellentesque. Scelerisque in dictum non consectetur a erat nam at lectus. Sed euismod nisi porta lorem mollis aliquam. Nunc mi ipsum faucibus vitae aliquet. Nibh cras pulvinar mattis nunc. Sed viverra tellus in hac habitasse platea. Ac tortor vitae purus faucibus ornare. Laoreet sit amet cursus sit amet dictum sit amet. Risus sed vulputate odio ut enim. Massa sapien faucibus et molestie ac feugiat sed. Proin libero nunc consequat interdum varius sit amet mattis vulputate. Eget sit amet tellus cras adipiscing enim eu. Ullamcorper dignissim cras tincidunt lobortis feugiat. Arcu ac tortor dignissim convallis aenean et tortor at. Aliquet risus feugiat in ante metus. Sit amet luctus venenatis lectus magna. Egestas maecenas pharetra convallis posuere morbi leo. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem.

        Ac orci phasellus egestas tellus rutrum tellus. Ultrices neque ornare aenean euismod elementum nisi quis. Vel pharetra vel turpis nunc eget. Quis lectus nulla at volutpat diam ut venenatis tellus in. Egestas congue quisque egestas diam in arcu. Tincidunt praesent semper feugiat nibh sed pulvinar. Tristique senectus et netus et malesuada fames. Tristique nulla aliquet enim tortor. Aliquet nibh praesent tristique magna sit amet purus. Diam maecenas ultricies mi eget mauris pharetra et ultrices neque. Morbi tristique senectus et netus et malesuada. Venenatis tellus in metus vulputate eu scelerisque felis. Risus pretium quam vulputate dignissim suspendisse in. Ut venenatis tellus in metus vulputate. Turpis in eu mi bibendum. Pellentesque elit eget gravida cum sociis natoque. Tristique risus nec feugiat in fermentum posuere urna. Senectus et netus et malesuada fames ac turpis.</string>
    <string name="moon">Moon</string>
    <string name="motion">motion</string>
    <string name="motion2">motion2</string>
    <string name="motion3">motion3</string>
    <string name="motion4">motion4</string>
</resources>