<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomViewActivity">

    <TextView
        android:id="@+id/customViewLabel"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="Fan Control"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.example.xlwapp.utils.customviews.DialView
        android:id="@+id/dialView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:fancoloroff="@color/colorPrimary"
        app:fancolor1="@color/colorAccent"
        app:fancolor2="@color/colorPrimaryDark"
        app:fancolor3="@color/design_default_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/customViewLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/button"
        android:text="@string/to_mini_paint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dialView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/button1"
        android:text="@string/to_clipping_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/button2"
        android:text="@string/to_spotlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>