<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="guessGameViewModel"
            type="com.example.xlwapp.viewmodel.guessgame.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/guess_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{guessGameViewModel.currentTimeString}"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/guess_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/quote_format(guessGameViewModel.currentWord)}"
            android:textSize="50sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/guess_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/score_format(guessGameViewModel.score)}"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_text"/>

        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/skip"
            android:layout_marginStart="10dp"
            android:onClick="@{()->guessGameViewModel.skipGuess()}"
            />

        <Button
            android:id="@+id/got_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/got_it"
            android:background="@color/colorAccent"
            android:onClick="@{()->guessGameViewModel.gotTheGuess()}"
            />

        <Button
            android:id="@+id/end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/end_game"
            android:layout_marginEnd="10dp"
            android:onClick="@{()->guessGameViewModel.onGameFinish()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

